--- a/index.html
+++ b/index.html
@@ -12,18 +12,31 @@
 
       <h2 id="tagLine">Functional Pizza For All!</h2>
       
-      <img src="pizzaMan.jpeg" alt="logo">
+      <img src="file:///Users/mellaniesoriano/Desktop/devleaguePrep/pizzaria/assets/pizzaMan.jpeg" alt="logo">
 
       <nav id="topMenu">
-        <li class="guide"><a href="today"></a>Today's Special</li>
-        <li class="guide"><a href="#menu"></a>Menu</li>
+        <li class="guide"><a href="#today">Today's Special</a></li>
+
+        <li class="guide"><a href="#menu">Menu</a></li>
+
         <li class="guide"><a href="#subscribe">Subscribe</a></li>
+
         <li class="guide"><a href="#visit">Visit</a></li>
       </nav>
 
     </div>
 
   </header>
+
+  <section id="today">
+    
+    <div class="content">
+      <h3 class="sectionTitle">Today's Special</h3>
+
+      <p id="special">Conditional Love</p>
+    </div>
+
+  </section>
   
 </body>
 </html>
