--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <h2 id="tagLine">Functional Pizza For All!</h2>
       
-      <img src="file:///Users/mellaniesoriano/Desktop/devleaguePrep/pizzaria/assets/pizzaMan.jpeg" alt="logo">
+      <img src="pizzaMan.jpeg" alt="logo">
 
       <nav id="topMenu">
         <li class="guide"><a href="#today">Today's Special</a></li>
@@ -95,8 +95,15 @@
         <li class="hours">Coding on Saturdays</li>
       </ul>
     </div>
-
   </section>
   
+<footer>
+  <div class="content">
+    <p id="credit">Site Design and Development By Mellanie</p>
+    <p id="copyright">&copy 2017 Gin Drinkres Association (GDA)</p>
+
+  </div>
+</footer>
+
 </body>
 </html>
