--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
       <p id="deal">Sign up for our special deals!</p>
 
-      <input type="First Name">
-      <input type="Last Name">
-      <input type="email">
+      <input type="First Name" value="First Name">
+      <input type="Last Name" value="Last Name">
+      <input type="email" value="Email">
     </div>
   </section>
 
