--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli|Ovo" rel="stylesheet">
   <title>Best Pizza Ever</title>
 </head>
 <body>
   <header id="intro">
     <div class="content">
       <h1 id="name">Pizzaria La DevLeague</h1>
-
       <h2 id="tagLine">Functional Pizza For All!</h2>
       
       <img src="pizzaMan.jpeg" alt="logo">
 
-      <nav id="topMenu">
+      <nav id="fixedNav">
         <li class="guide"><a href="#today">Today's Special</a></li>
 
         <li class="guide"><a href="#menu">Menu</a></li>
