--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli|Ovo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Vast+Shadow|Poppins|Playfair+Display" rel="stylesheet">
   <title>Best Pizza Ever</title>
 </head>
 <body>
+
+ <nav id="Nav">
+      <ul>
+          <li class="guide"><a href="#today">Today's Special</a></li>
+  
+          <li class="guide"><a href="#menu">Menu</a></li>
+
+          <li class="guide"><a href="#subscribe">Subscribe</a></li>
+
+          <li class="guide"><a href="#visit">Visit</a></li>
+        </ul>
+      </nav>
+
+<!-- parallax header content -->
   <header id="intro">
     <div class="content">
-      <h1 id="name">Pizzaria La DevLeague</h1>
-      <h2 id="tagLine">Functional Pizza For All!</h2>
-      
-      <img src="pizzaMan.jpeg" alt="logo">
-
-      <nav id="fixedNav">
-        <li class="guide"><a href="#today">Today's Special</a></li>
-
-        <li class="guide"><a href="#menu">Menu</a></li>
-
-        <li class="guide"><a href="#subscribe">Subscribe</a></li>
-
-        <li class="guide"><a href="#visit">Visit</a></li>
-      </nav>
+      <h1 id="name">Pizzaria<br>La DevLeague</h1>
+      <h2 id="tagLine">Functional Pizza For All</h2>
+<!-- parallax header ends -->
     </div>
   </header>
-
+<main>
   <section id="today">
     <div class="content">
       <h3 class="sectionTitle">Today's Special</h3>
-
       <p id="special">Conditional Love</p>
     </div>
   </section>
@@ -78,7 +80,7 @@
 
       <p id="deal">Sign up for our special deals!</p>
 
-      <input type="First Name" value="First Name">
+      <input type="First Name" placeholder="" ="First Name">
       <input type="Last Name" value="Last Name">
       <input type="email" value="Email">
     </div>
@@ -93,18 +95,17 @@
         <li id="map"><a href="https://www.google.com/maps?ll=21.223782,-157.899628&z=13&t=m&hl=en&gl=US&mapclient=embed&cid=15585431400080676543" target="_blank">View Map</a></li>
         <li class="hours">Monday - Satuday</li>
         <li class="hours">12pm - 12am</li>
-        <li class="hours">Coding on Saturdays</li>
+        <li class="hours">Coding on Sundays</li>
       </ul>
     </div>
   </section>
   
 <footer>
-  <div class="content">
     <p id="credit">Site Design and Development By Mellanie</p>
     <p id="copyright">&copy 2017 Gin Drinkres Association (GDA)</p>
 
-  </div>
 </footer>
+</main>
 
 </body>
 </html>
