--- a/index.html
+++ b/index.html
@@ -40,35 +40,7 @@
     <div class="content">
       <h3 class="sectionTitle">Menu</h3>
       <div class="pizza">
-        <p class="pizzaName">Object of My Desire</p>
-
-        <p class="description">A programmers delight, this classic has string cheese, an array of BBQ meats and 1 special sauce.</p>
-
-        <p class="price">19.99</p>
-
-        <p class="pizzaName">Four Loop</p>
-
-        <p class="description">Spin your wheel with this quattro cheese mix doused in garlic and truffle oil. Loop there it is!</p>
-
-        <p class="price">44.44</p>
-
-        <p class="pizzaName">Conditional Love</p>
-
-        <p class="description">This island favorite doesn't give you a chance to say no. Korean bulgogi meat, kim chee, mozzarella cheese and onions always returns true! Boo~Ya!</p>
-
-        <p class="price">22.14</p>
-
-        <p class="pizzaName">The DOM</p>
-
-        <p class="description">This dynamic blend of Duck, Olives and Mango will change your original thought of what a pizza should be. The only thing constant is change for this bad boy!</p>
-
-        <p class="price">16.99</p>
-
-        <p class="pizzaName">Conjunction Function</p>
-
-        <p class="description">Create your own pie by passing in handpicked fresh ingredients. Invoke your appetite and creativity! Mamma Mia return back to glory!</p>
-
-        <p class="price">17.02</p>
+        
 
       </div>
     </div>
@@ -80,9 +52,9 @@
 
       <p id="deal">Sign up for our special deals!</p>
 
-      <input type="First Name" placeholder="" ="First Name">
-      <input type="Last Name" value="Last Name">
-      <input type="email" value="Email">
+      <input type="First Name" placeholder="First Name">
+      <input type="Last Name" placeholder="Last Name">
+      <input type="email" placeholder="Email">
     </div>
   </section>
 
@@ -107,5 +79,6 @@
 </footer>
 </main>
 
+<script src="js/app.js"></script>
 </body>
 </html>
