added tags to special

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 <main>
   <section id="today">
     <div class="content">
-      <h3 class="sectionTitle">Today's Special</h3>
-      <p id="special">Conditional Love</p>
+      <h1 class="sectionTitle">Today's Special</h1>
+      <h2 id="specialName">pizza name</h2>
+      <h3 id="specialPrice">price</h3>
+      <p id="specialDesc">description</p>
     </div>
   </section>
 
