--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 <main>
   <section id="today">
     <div class="content">
-      <h3 class="sectionTitle">Today's Special</h3>
+      <h3 id="sectionTitleSpecial">Today's Special</h3>
       <h2 id="specialName">pizza name</h2>
-      <h3 id="specialPrice">price</h3>
       <p id="specialDesc">description</p>
+      <h4 id="specialPrice">price</h4>
     </div>
   </section>
 
