--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Vast+Shadow|Poppins|Playfair+Display" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Candal|Poppins|Playfair+Display|Cookie" rel="stylesheet">
   <title>Best Pizza Ever</title>
 </head>
 <body>
